updated map popovers to look like scenario

--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -161,6 +161,11 @@
         background-color: #dddddd;
     }
 
+    td {
+        /* top | right | bottom | left */
+        padding: 0px 0px 0px 10px;
+    }
+
     .popupphoto {
         display: block;
         margin-left: auto;
