adding in proper card title

--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -1178,7 +1178,7 @@
 
                 let title = document.createElement('h5');
                 // title.innerText = fieldRecord.properties.county_single + " County, WI; Farm: " + fieldRecord.properties.farm_id + "; Field: " + fieldRecord.id;
-                title.innerText = "Field " + fieldRecord.id;//fieldRecord.properties.county_single + " County, WI"
+                title.innerText = fieldRecord.properties.county_single + " County, WI"
                 title.className = 'card-title';
 
                 let text = document.createElement('p');
