--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -53,7 +53,7 @@
 
         </div>
         <div class="card-group">
-          <!-- Commenting out scenario button for now
+          Commenting out scenario button for now
           <a href="{% url 'wisc_cc_scenario' %}">
             <div class="card">
               <img class="card-img-top" src="{% static 'img/kewaunee_covers.jpeg' %}"
@@ -67,7 +67,7 @@
                 <a href="{% url 'wisc_cc_scenario' %}" class="btn btn-primary">Go to the scenarios</a>
               </div>
             </div>
-          </a> -->
+          </a>
           <!-- <a href="{% url 'wisc_cc_interested' %}"> -->
           <div class="card">
             <img class="card-img-top" src="{% static 'img/checking_corn.jpg' %}"
