restructured response table to focus on surveyfield in order to be able to use the survey field id for filtering; updated other column templates, photo, lab, reponse, as needed

--- a/wisccc/templates/wisccc/update_column_ancillarydata.html
+++ b/wisccc/templates/wisccc/update_column_ancillarydata.html
@@ -1,3 +1,1 @@
-{% if record.survey_year > 2020 %}
-<a class="btn btn-info btn-sm" href="{% url 'update_labdata' record.id %}">Open</a>
-{% endif %}
+<a class="btn btn-info btn-sm" href="{% url 'update_labdata_fld' record.id %}">Open</a>
