--- a/wisccc/templates/wisccc/update_column_response.html
+++ b/wisccc/templates/wisccc/update_column_response.html
@@ -1,6 +1,6 @@
-{% if record.survey_year == 2023 %}
-<a class="btn btn-info btn-sm" href="{% url 'update_response' record.id %}">Open</a>
+{% if record.survey_farm.survey_year == 2023 %}
+<a class="btn btn-info btn-sm" href="{% url 'update_response' record.survey_farm.id %}">Open</a>
 {% else %}
 <a class="btn btn-info btn-sm"
-    href="{% url 'wisc_cc_survey' record.survey_year %}?farmer_id={{ record.farmer_id }}">Open</a>
+    href="{% url 'wisc_cc_survey' record.survey_farm.survey_year %}?farmer_id={{ record.survey_farm.farmer_id }}">Open</a>
 {% endif %}
