--- a/wisccc/templates/wisccc/upload_photo_column.html
+++ b/wisccc/templates/wisccc/upload_photo_column.html
@@ -1,3 +1,1 @@
-{% if record.survey_year == 2023 %}
-<a class="btn btn-info btn-sm" href="{% url 'upload_photo' record.id %}">Upload photo</a>
-{% endif %}
+<a class="btn btn-info btn-sm" href="{% url 'upload_photo_fld' record.id %}">Upload photo</a>
