--- a/wisccc/templates/wisccc/wisc_cc_acis.html
+++ b/wisccc/templates/wisccc/wisc_cc_acis.html
@@ -73,13 +73,13 @@
             var sid = $("#stnSelect").val()
             console.log("Selected sid: " + sid)
             if (sid == "US1MNHN0169 6") {
-                getStnData(sid, "2024-04-28", "2025-07-01")
+                getStnData(sid, "2024-04-28", new Date().toISOString().slice(0, 10))
             } else if (sid == "US1MNHN0042 6") {
                 getStnData(sid, "2011-04-01", "2023-10-25")
             } else if (sid == "US1MNRM0054 6") {
-                getStnData(sid, "2015-04-19", "2025-07-01")
+                getStnData(sid, "2015-04-19", new Date().toISOString().slice(0, 10))
             } else if (sid == "14922 1") {
-                getStnData(sid, "1938-04-01", "2025-07-01")
+                getStnData(sid, "1938-04-01", new Date().toISOString().slice(0, 10))
             }
 
         });
@@ -283,7 +283,7 @@
                 sid: sid,
                 sdate: sdate,
                 edate: edate,
-                elems: "pcpn" // monthly_level //"pcpn"
+                elems: monthly_level //"pcpn"
             }
 
 
