--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -186,9 +186,13 @@
             <li class="nav-item" id="nav-home">
                 <a class="nav-link" href="{% url 'wisc_cc_home' %}">Home</a>
             </li>
+            <li class="nav-item" id="nav-scenario">
+                <a class="nav-link" href="{% url 'wisc_cc_scenario' %}">Cover Crop Scenario Tool</a>
+            </li>
             <li class="nav-item" id="nav-graph">
                 <a class="nav-link" href="{% url 'wisc_cc_graph' %}">Graph</a>
             </li>
+
             <li class="nav-item" id="nav-map">
                 <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
             </li>
@@ -380,6 +384,12 @@
         var whichpage = window.location.href.split("/").pop()
         if (whichpage.includes("graph")) {
             $("#nav-graph").addClass("active");
+        }
+        if (whichpage.includes("manager")) {
+            $("#nav-manager").addClass("active");
+        }
+        if (whichpage.includes("scenario")) {
+            $("#nav-scenario").addClass("active");
         }
         if (whichpage.includes("survey")) {
             $("#nav-survey").addClass("active");
