updated project name, dropping the citizen science

--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -8,7 +8,7 @@
 
 {% block body %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Citizen Science Data Network</a>
+  <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Data Network</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -72,19 +72,6 @@
 
 <br>
 <div class="container">
-  <!-- <div class="row justify-content-center">
-    <div class="col-lg-8 col-md-10 col-sm-12">
-      <div class="card">
-        <div class="card-body">
-          <h1 class="card-title logo text-center">
-            <a href="{% url 'wisc_cc_home' %}">
-              Wisconsin Cover Crop<br>Citizen Science Data Network
-            </a>
-          </h1>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
   {% block content %}
   {% endblock content%}
@@ -126,5 +113,5 @@
 </h1>
 {% endblock %}
 {% block title %}
-Wisconsin Cover Crop Citizen Science Data Network
+Wisconsin Cover Crop Data Network
 {% endblock title %}
