--- a/wisccc/templates/wisccc/wisc_cc_about.html
+++ b/wisccc/templates/wisccc/wisc_cc_about.html
@@ -38,7 +38,7 @@
                         practical cover crop recommendations.
                         Participating farmers receive personalized data on the amount of biomass their cover crop
                         produced as well as forage and nutrient analyses.
-                        Please explore our <a href="{% url 'wisc_cc_graph' %}">citizen science dashboard</a>.
+                        Please explore our <a href="{% url 'wisc_cc_graph' %}">cover crop data dashboard</a>.
                     </p>
 
 
