--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -117,7 +117,7 @@
         <hr>
         <p>
           The <a href="https://www.michaelfields.org/covercrops" target="_blank" rel="noopener noreferrer">Michael
-            Fields Agricultural Institute's</a> Wisconsin Cover Crop Citizen Science Project is
+            Fields Agricultural Institute's</a> Wisconsin Cover Crop Data Network is
           a partnership with
           UW-Madison's <a
             href="https://ipcm.wisc.edu/#:~:text=The%20University%20of%20Wisconsin%20Nutrient,to%20Wisconsin%20farmers%20and%20landowners."
