--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -176,7 +176,7 @@
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Citizen Science Data Network</a>
+    <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Data Network</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
